--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,9 @@
     "bootstrap": "~3.3.6",
     "angular-ui-codemirror": "~0.3.0",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.6.0",
-    "angular-ui-router": "ui-router#~0.2.15"
+    "angular-ui-router": "ui-router#~0.2.15",
+    "jasmine-data_driven_tests": "~1.1.1"
+  },
+  "devDependencies": {
   }
 }
