--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-tsd": "0.0.4",
     "gulp-typescript": "^2.6.0",
+    "gulp-typings": "^1.1.0",
     "gulp-util": "^3.0.7",
     "http-server": "^0.8.5",
     "jasmine-core": "^2.3.4",
@@ -25,12 +26,14 @@
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-requirejs": "^0.2.2",
+    "karma-simple-reporter": "^2.0.0",
     "main-bower-files": "^2.7.0",
     "merge2": "^0.3.4",
     "path": "^0.11.14",
     "phantomjs": "^1.9.18",
     "requirejs": "^2.1.17",
-    "tsd": "^0.6.0-beta.5"
+    "tsd": "^0.6.0-beta.5",
+    "typings": "^0.6.8"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
